Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ pages:
     paths:
       - node_modules/
   script:
-    - npm build
+    - npm run build
     - rm -rf public
     - cp build/index.html build/404.html
     - mv build public
