--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/submodules/ttn-payload-formater"]
 	path = src/submodules/ttn-payload-formater
-	url = https://gitlab.connect.te.com/tes/iot/tools/iot-applications/ttn-payload-formater
+	url = https://github.com/TEConnectivity/ttn-decoder
