--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/web-bluetooth": "^0.0.20",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "crc-32": "^1.2.2",
     "eslint-plugin-unused-imports": "^3.1.0",
     "framer-motion": "^11.0.25",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -31,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
+    "web-bluetooth-dfu": "^1.2.1",
     "web-vitals": "^2.1.4",
     "webbluetooth": "^3.2.1"
   },
