--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "@types/react-plotly.js": "^2.6.3",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/web-bluetooth": "^0.0.20",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
@@ -25,9 +26,11 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "framer-motion": "^11.0.25",
     "jszip": "^3.10.1",
+    "plotly.js": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-plotly.js": "^2.6.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -60,6 +63,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/plotly.js": "^2.35.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
