--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.0.0",
     "crc-32": "^1.2.2",
+    "crypto-js": "^4.2.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "fft.js": "^4.0.4",
     "framer-motion": "^11.0.25",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/plotly.js": "^2.35.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
